--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,20 +9,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btn1"
-        android:text="获取单个权限"/>
+        android:text="获取网络图片"/>
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/btn2"
-        android:text="获取多个权限"/>
-    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btn3"
-        android:text="拍照"/>
-    <Button
+        android:text="获取本地保存的图片"/>
+    <ImageView
+        android:id="@+id/iv_img1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn4"
-        android:text="电话"/>
+        android:layout_height="wrap_content" />
+    <ImageView
+        android:id="@+id/iv_img2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
