动态添加和删除view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,41 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
-    <Button
-        android:id="@+id/btn"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="点击弹出窗口" />
+        android:text="动态添加组件示例"
+        android:id="@+id/textview"/>
+    <HorizontalScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:scrollbars="none"
+        android:paddingBottom="30dp"
+        >
+        <LinearLayout
+            android:id="@+id/lasted_activity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="190dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginRight="20dp">
+                <ImageView
+                    android:layout_width="190dp"
+                    android:layout_height="110dp"
+                    android:background="#f2f2f2"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="4dp"
+                    android:text="自驾|穿越湖泊和中士"/>
+            </LinearLayout>
+        </LinearLayout>
+    </HorizontalScrollView>
+
+
 </LinearLayout>
